--- a/src/index.html
+++ b/src/index.html
@@ -122,28 +122,12 @@
 								    <span class="theme-icon-holder card-icon-holder mr-2">
 								        <i class="fas fa-laptop-code fa-fw"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Upscaling (web) </span>
+							        <span class="card-title-text">Upscaling Filters </span>
 							    </h5>
 							    <div class="card-text">
 								    API documentation for our Javascript upscaler library and HTML5 player plugins
 								</div>
 							    <a class="card-link-mask" href="docs-page.html#section-upscaling"></a>
-						    </div><!--//card-body-->
-					    </div><!--//card-->
-				    </div><!--//col-->
-				    <div class="col-12 col-lg-4 py-3">
-					    <div class="card shadow-sm">
-						    <div class="card-body">
-							    <h5 class="card-title mb-3">
-								    <span class="theme-icon-holder card-icon-holder mr-2">
-								        <i class="fas fa-tablet-alt fa-fw"></i>
-							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Upscaling (mobile)</span>
-							    </h5>
-							    <div class="card-text">
-									API documentation for our Mobile AI Upscaler SDKs
-								</div>
-							    <a class="card-link-mask" href="docs-page.html#item-upscale-mobile"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
