--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -1299,6 +1299,29 @@
 						<li>The destination</li>
 						<li>When rendering happens</li>
 					</ul>
+
+
+
+					<p>
+					<b>Loading</b></p>
+
+					<p> The API for loading the Core Upscaler is</p>
+					<p>NPM
+						<code><pre>
+
+     import { UpscaleCoreFilter } from '@vectorly-io/ai-filters';
+					</pre></code>
+
+
+					<p>
+
+						CDN
+						<code><pre>https://cdn.vectorly.io/ai-filters/v1/latest/vectorly.UpscaleCoreFilter.js</pre></code></p>
+
+					</p>
+
+
+
 					<p><strong>Setting a destination</strong></p>
 					<p>Each Upscaler object is tied to an individual <code>canvas</code> element, and renders to that <code>canvas</code> element.</p>
 					<p>You specify the <code>canvas</code> element you want to render the upscales to via the upscaler constructor</p>
