--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="Vectorly: AI Filters Documentation" property="og:title">
 	<meta
-			content="Vectorly's SDK makes it easy to deploy AP Filters into WebRTC and video streaming applications"
+			content="Vectorly's SDK makes it easy to deploy AI filters into WebRTC and video streaming applications"
 			name="description">
 	<meta content="https://vectorly.io/images/new/ai-compression-temporary.png" property="og:image">
 
 	<meta content="Vectorly: Realtime AI Filters" property="twitter:title">
 	<meta
-			content="Vectorly's SDK makes it easy to deploy AP Filters into WebRTC and video streaming applications"
+			content="Vectorly's SDK makes it easy to deploy AI filters into WebRTC and video streaming applications"
 			property="twitter:description">
 	<meta content="https://vectorly.io/images/new/ai-compression-temporary.png" property="twitter:image">
 
