Changed browser support for WebGL model

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -350,7 +350,7 @@
 									<tr style="text-align: center">
 										<td style="border-top: white; font-weight: bold;">WebGL model</td>
 										<td style="border-top: white;background: #d3ffd8">Yes</td>
-										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background:#ffeccf">Soon (quick fix)</td>
 										<td style="border-top: white;background: #d3ffd8">Yes</td>
 										<td style="border-top: white;background: #d3ffd8">Yes</td>
 										<td style="border-top: white;background: #d3ffd8">Yes</td>
